# pixelserver

./: README.md  pyproject.toml  run.sh
ledpanel_manager/: __init__.py  app.py  ipixel.py  models.py  rendering.py
ledpanel_manager/static/: app.css
