[project]
name = "ledpanel-manager"
version = "0.1.0"
description = "GTK Linux client for iPixel Color 16x64 BLE LED matrix panels"
requires-python = ">=3.11"
dependencies = [
  "PyGObject>=3.46",
  "Pillow>=10.0",
  "bleak>=0.21",
  "pypixelcolor>=0.4.0",
]

[project.scripts]
ledpanel-manager = "ledpanel_manager.app:main"

[tool.setuptools.package-data]
ledpanel_manager = ["fonts/*.ttf"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
